test/unittest/error/tst.DTRACEFLT_DIVZERO.r
The arguments are 2 3 16 4 #

-- @@stderr --
dtrace: error on enabled probe ID 2 (ID 1: dtrace:::BEGIN): divide-by-zero in action #3 at DIF offset 16
